# docker-cpp-multi-stage-build

./: Dockerfile
src/: CMakeLists.txt  main.cpp
